crates/osp-core/tests/compile_fail/cP1_predicate_stub_literal.stderr
error: cannot construct `PredicateStub` with struct literal syntax due to private fields
  --> tests/compile_fail/cP1_predicate_stub_literal.rs:10:17
   |
10 |     let _stub = PredicateStub {
   |                 ^^^^^^^^^^^^^
11 |         rule_id: ConceptNodeId("RuleCandidate:X".into()),
   |         ------------------------------------------------ private field
12 |         reason: PredicateStubReason::MetricUnresolved,
   |         --------------------------------------------- private field
13 |         unresolved_slots: vec![PredicateSlot::Metric],
   |         --------------------------------------------- private field
14 |         suggested_templates: vec![PredicateTemplateId::MetricThreshold],
   |         --------------------------------------------------------------- private field
   |
   = note: ...and other private field `cross_family_hint` that was not provided
